@startuml

title __LOGIN_1TH's Class Diagram__\n

  namespace com.example.login_1th {
    class com.example.login_1th.BuildConfig {
    }
  }
  

  namespace com.example.login_1th {
    class com.example.login_1th.HomeActivity {
    }
  }
  

  namespace com.example.login_1th {
    class com.example.login_1th.MainActivity {
    }
  }
  

  namespace com.example.login_1th {
    class com.example.login_1th.WelcomeActivity {
    }
  }
  

  com.example.login_1th.HomeActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.login_1th.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.login_1th.WelcomeActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
